--- a/lizard_ui/static/lizard_ui/lizard-bootstrap.less
+++ b/lizard_ui/static/lizard_ui/lizard-bootstrap.less
@@ -471,3 +471,9 @@ div.nonworking-workspace-acceptable {
 }
 
 /* ****************** /Workspace editor ("kaartlagen") ************ */
+
+// Fix for invisible GMaps tiles
+// overrides reset.less
+img {
+  max-width: none !important;
+}
